--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
   "outputDirectory": "public",
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/api/:match", "destination": "/api/:match" },
     { "source": "/:path*", "destination": "/index.html" }
   ]
 }
