--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
   "outputDirectory": "public",
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "rewrites": [
-    { "source": "/api/:match", "destination": "/api/:match" },
+    { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/:path*", "destination": "/index.html" }
   ]
 }
